--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,13 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+black = "==19.10b0"
+pylint = "*"
+debugpy = "==1.0.0b12"
+rope = "*"
 
 [packages]
+selenium = "*"
 
 [requires]
 python_version = "3.8"
