--- a/app/Pipfile
+++ b/app/Pipfile
@@ -11,6 +11,9 @@ rope = "*"
 
 [packages]
 selenium = "*"
+pynput = "*"
+pyautogui = "*"
+webdriver-manager = "*"
 
 [requires]
 python_version = "3.8"
